# mmud

./: LICENSE  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/ca/maztheman/mmud/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .gitignore  CMakeLists.txt  CMakeLists_old.txt  conanfile.txt
app/src/main/cpp/cmake/: android_21_arm_clang
app/src/main/cpp/src/: CMakeLists.txt  file_compat.h  main.cpp  main.cpp.save  pch.h
app/src/main/cpp/src/backend/: CMakeLists.txt  pch.h
app/src/main/cpp/src/backend/compat/: platform.h
app/src/main/cpp/src/backend/container/: concurrentqueue.h  protected_vector.cpp  protected_vector.h
app/src/main/cpp/src/backend/core/: console_session.cpp  console_session.h  session.hpp
app/src/main/cpp/src/backend/net/: authentication.hpp  socket.hpp  telnet.hpp
app/src/main/cpp/src/backend/util/: commands.cpp  commands.hpp  lua_script.cpp  lua_script.h  settings.cpp  settings.h  utility.hpp
app/src/main/cpp/src/lua/: CMakeLists.txt
app/src/main/java/ca/maztheman/mmud/: MainActivity.kt
app/src/main/java/ca/maztheman/mmud/ui/main/: PageViewModel.kt  PlaceholderFragment.kt  SectionsPagerAdapter.kt
app/src/main/res/layout/: activity_main.xml  fragment_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/ca/maztheman/mmud/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
